[WIP] Use toList.